--- a/src/components/HomePage/Login.css
+++ b/src/components/HomePage/Login.css
@@ -1,92 +1,131 @@
 .login-card {
-    display: flex;
-    flex-direction: column;
-    align-items: center;
-    border: solid 1px rgb(255 255 255);
-    width: 32rem;
-    height: 40rem;
-    border-radius: 20px;
-    background-color: rgb(255, 255, 255);
-    margin-top: 5rem;
-    margin-left: 43.5rem;
-    padding: 3.5rem 0 2.5rem 0; 
-  }
-
-
-.home-img{
-  /* align-content: center; */
+  display: flex;
+  flex-direction: column;
   align-items: center;
+  border: solid 1px rgb(255 255 255);
+  width: 32rem;
+  height: 35rem;
+  border-radius: 20px;
+  background-color: rgb(255, 255, 255);
+  padding: 3.5rem 0 2.5rem 0;
+  margin-top: 8rem;
 }
-  .login-button {
-    border-radius: 8px;
-    width: 27rem;
-    max-width: 100%;
-    height: 3rem;
-    margin-bottom: 3rem;
-    font-weight: 600;
-    color: #fff;
-    background: #188fff;
-    border: 1px solid #188fff;
-  }
-  
-  .login-button:hover {
-    background: #0f69ff;
-    border: 1px solid #0f69ff;
-  }
-  
-  #text-1 {
-    font-size: 25pt;
-    font-weight: 600;
-    font-family: "Lora", serif;
-    background-image: -webkit-linear-gradient(left, #f00, #ff2b00, #f50, #ff8000, #fa0, #ffd500, #ff0, #d4ff00, #af0, #80ff00, #5f0, #2bff00, #0f0, #00ff2a, #0f5, #00ff80, #0fa, #00ffd5, #0ff, #00d5ff, #0af, #0080ff, #05f, #002aff, #00f, #2b00ff, #50f, #8000ff, #a0f, #d400ff, #f0f, #ff00d4, #f0a, #ff0080, #f05, #ff002b, #f00);
-    -webkit-animation: animatedBackground_a 5s linear infinite alternate;
-    -webkit-background-clip: text;
-    -webkit-text-fill-color: #0000;
-    background-clip: text;
+
+.home-img {
+  display: flex;
+  justify-content: center;
+}
+.login-button {
+  border-radius: 8px;
+  width: 27rem;
+  max-width: 100%;
+  height: 3rem;
+  margin-bottom: 3rem;
+  font-weight: 600;
+  color: #fff;
+  background: #188fff;
+  border: 1px solid #188fff;
+}
+
+.login-button:hover {
+  background: #0f69ff;
+  border: 1px solid #0f69ff;
+}
+
+#text-1 {
+  font-size: 25pt;
+  font-weight: 600;
+  font-family: "Lora", serif;
+  background-image: -webkit-linear-gradient(
+    left,
+    #f00,
+    #ff2b00,
+    #f50,
+    #ff8000,
+    #fa0,
+    #ffd500,
+    #ff0,
+    #d4ff00,
+    #af0,
+    #80ff00,
+    #5f0,
+    #2bff00,
+    #0f0,
+    #00ff2a,
+    #0f5,
+    #00ff80,
+    #0fa,
+    #00ffd5,
+    #0ff,
+    #00d5ff,
+    #0af,
+    #0080ff,
+    #05f,
+    #002aff,
+    #00f,
+    #2b00ff,
+    #50f,
+    #8000ff,
+    #a0f,
+    #d400ff,
+    #f0f,
+    #ff00d4,
+    #f0a,
+    #ff0080,
+    #f05,
+    #ff002b,
+    #f00
+  );
+  -webkit-animation: animatedBackground_a 5s linear infinite alternate;
+  -webkit-background-clip: text;
+  -webkit-text-fill-color: #0000;
+  background-clip: text;
 }
 @keyframes animatedBackground_a {
-    0% { background-position: 0 0 }
-    100% { background-position: -500px 0 }
+  0% {
+    background-position: 0 0;
+  }
+  100% {
+    background-position: -500px 0;
+  }
+}
 
-  }
-  
-  #text-2 {
-    font-family: "Noto Sans", sans-serif;
-    font-size: 21px;
-    margin: 15px 0 40px 0;
-    color: #867373;
-  }
-  
-  #text-3 {
-    display: flex;
-    justify-content: center;
-  }
-  
-  #text-4 {
-    margin-left: -14rem;
-    margin-top: 5px;
-    margin-bottom: 2rem;
-    font-size: 18px;
-    color: #867373;
-    font-family: "Noto Sans", sans-serif;
-  }
-  
-  #text-4:hover {
-    cursor: pointer;
-    font-weight: 600;
-    color: black;
-  }
-  
-  #text-5 {
-    font-family: "Noto Sans", sans-serif;
-    font-size: 17.5px;
-  }
-  #text-5 strong {
-    color: #188fff;
-  }
-  
-  #text-5 strong:hover {
-    cursor: pointer;
-    color: #0f69ff;
-  }
-  
+#text-2 {
+  font-family: "Noto Sans", sans-serif;
+  font-size: 21px;
+  margin: 15px 0 40px 0;
+  color: #867373;
+}
+
+#text-3 {
+  display: flex;
+  justify-content: center;
+}
+
+#text-4 {
+  margin-left: -14rem;
+  margin-top: -2.4rem;
+  margin-bottom: 2rem;
+  font-size: 18px;
+  color: #867373;
+  font-family: "Noto Sans", sans-serif;
+}
+
+#text-4:hover {
+  cursor: pointer;
+  font-weight: 600;
+  color: black;
+}
+
+#text-5 {
+  font-family: "Noto Sans", sans-serif;
+  font-size: 17.5px;
+}
+#text-5 strong {
+  color: #188fff;
+}
+
+#text-5 strong:hover {
+  cursor: pointer;
+  color: #0f69ff;
+}
