--- a/src/components/HomePage/Signup.css
+++ b/src/components/HomePage/Signup.css
@@ -1,93 +1,141 @@
 .signup-card {
-    display: flex;
-    flex-direction: column;
-    align-items: center;
-    border: solid 1px rgb(255 255 255);
-    width: 40rem;
-    height: 44rem;
-    border-radius: 20px;
-    background-color: rgb(255 255 255);
-    margin-top: 6rem;
-    margin-left: 39rem;
-    padding: 3.5rem 0 2.5rem 0;
-  }
-  .signup-label {
-    margin-bottom: 1rem;
-    display: block;
-    font-style: italic;
-  }
-  
-  .signup-input {
-    border-radius: 8px;
-    width: 30rem;
-    max-width: 100%;
-    background-color: transparent;
-  }
-  
-  .signup-input:active,
-  .signup-input:focus {
-    border-color: rgb(26 115 232);
-    box-shadow: none;
-  }
-  .signup-width {
-    width: 14.5rem;
-  }
-  .signup-details {
-    display: flex;
-  }
-  .margin--right {
-    margin-right: 1rem;
-  }
-  
-  .signup-button {
-    border-radius: 8px;
-    width: 30rem;
-    max-width: 100%;
-    height: 3rem;
-    font-weight: 600;
-    color: #fff;
-    background: #188fff;
-    border: 1px solid #188fff;
-  }
-  
-  .signup-button:hover {
-    background: #0f69ff;
-    border: 1px solid #0f69ff;
-  }
-  
-  .s-password-text {
-    margin-top: -0.5rem;
-    margin-bottom: 2rem;
-  }
-  .s-statement {
-    margin-left: 4rem;
-    color: rgb(108 117 125) !important;
-    margin-bottom: 2rem;
-  }
-  
-  .s-statement strong {
-    color: #188fff;
-  }
-  
-  #s-text-1 {
-    font-size: 25pt;
-    font-weight: 600;
-    font-family: "Lora", serif;
-    padding-bottom: 2rem;
-  }
-  
-  #s-text-5 {
-    font-family: "Noto Sans", sans-serif;
-    font-size: 17.5px;
-    margin-left: 7rem;
-    margin-top: 25px;
-  }
-  #s-text-5 strong {
-    color: #188fff;
-  }
-  
-  #s-text-5 strong:hover {
-    cursor: pointer;
-    color: #0f69ff;
-  }
-  
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  border: solid 1px rgb(255 255 255);
+  width: 36rem;
+  height: 40rem;
+  border-radius: 20px;
+  background-color: rgb(255 255 255);
+  padding: 3.5rem 0 2.5rem 0;
+  margin-top: 5rem;
+}
+
+.home-img {
+  display: flex;
+  justify-content: center;
+}
+.signup-label {
+  margin-bottom: 1rem;
+  display: block;
+  font-style: italic;
+}
+
+.signup-input {
+  border-radius: 8px;
+  width: 30rem;
+  max-width: 100%;
+  background-color: transparent;
+}
+
+.signup-input:active,
+.signup-input:focus {
+  border-color: rgb(26 115 232);
+  box-shadow: none;
+}
+.signup-width {
+  width: 14.5rem;
+}
+.signup-details {
+  display: flex;
+  justify-content: center;
+}
+.margin--right {
+  margin-right: 1rem;
+}
+
+.signup-button {
+  border-radius: 8px;
+  width: 30rem;
+  max-width: 100%;
+  height: 3rem;
+  font-weight: 600;
+  color: #fff;
+  background: #188fff;
+  border: 1px solid #188fff;
+}
+
+.signup-button:hover {
+  background: #0f69ff;
+  border: 1px solid #0f69ff;
+}
+
+.s-password-text {
+  margin-top: -0.5rem;
+  margin-bottom: 2rem;
+}
+.s-statement {
+  margin-left: 4rem;
+  color: rgb(108 117 125) !important;
+  margin-bottom: 2rem;
+}
+
+.s-statement strong {
+  color: #188fff;
+}
+
+#s-text-1 {
+  font-size: 25pt;
+  font-weight: 600;
+  font-family: "Lora", serif;
+  padding: 1rem;
+  background-image: -webkit-linear-gradient(
+    left,
+    #f00,
+    #ff2b00,
+    #f50,
+    #ff8000,
+    #fa0,
+    #ffd500,
+    #ff0,
+    #d4ff00,
+    #af0,
+    #80ff00,
+    #5f0,
+    #2bff00,
+    #0f0,
+    #00ff2a,
+    #0f5,
+    #00ff80,
+    #0fa,
+    #00ffd5,
+    #0ff,
+    #00d5ff,
+    #0af,
+    #0080ff,
+    #05f,
+    #002aff,
+    #00f,
+    #2b00ff,
+    #50f,
+    #8000ff,
+    #a0f,
+    #d400ff,
+    #f0f,
+    #ff00d4,
+    #f0a,
+    #ff0080,
+    #f05,
+    #ff002b,
+    #f00
+  );
+  -webkit-animation: animatedBackground_a 5s linear infinite alternate;
+  -webkit-background-clip: text;
+  -webkit-text-fill-color: #0000;
+  background-clip: text;
+}
+
+#s-text-5 {
+  font-family: "Noto Sans", sans-serif;
+  font-size: 17.5px;
+  margin-left: 7rem;
+  margin-top: 25px;
+}
+#s-text-5 strong {
+  color: #188fff;
+}
+
+#s-text-5 strong:hover {
+  cursor: pointer;
+  color: #0f69ff;
+}
